--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.skill-card {
+  @apply h-[150px] w-[150px] flex flex-col items-center justify-center p-4 bg-[#04142bd9] rounded-lg shadow-md transition-transform transform hover:scale-105 hover:shadow-xl;
+}
